--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "iview": "^2.7.4",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
