--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "echarts": "^4.0.2",
     "iview": "^2.7.4",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
